fix flickering animation

--- a/css/style.css
+++ b/css/style.css
@@ -94,22 +94,22 @@ body {
 
 @keyframes flickering-lights {
   0% {
-    filter: contrast(1.35);
+    filter: contrast(1.5);
   }
   15% {
-    filter: contrast(0.65);
+    filter: contrast(0.8);
   }
   45% {
-    filter: contrast(0.65);
+    filter: contrast(0.8);
   }
   60% {
-    filter: contrast(1.25);
+    filter: contrast(1.35);
   }
   70% {
-    filter: contrast(0.65);
+    filter: contrast(0.8);
   }
   100% {
-    filter: contrast(0.65);
+    filter: contrast(0.8);
   }
 }
 
